Fix spacing

--- a/src/assets/layout/styles/layout/sidebar/_sidebar_compact.scss
+++ b/src/assets/layout/styles/layout/sidebar/_sidebar_compact.scss
@@ -2,7 +2,7 @@
     .layout-wrapper {
         &.layout-compact {
             .layout-topbar {
-                width: calc(100% - 6rem);
+                width: calc(100% - $compactSidebarWidth);
                 margin-left: $compactSidebarWidth;
 
                 .topbar-left {
